--- a/.github/taskfiles/k8s.tasks.yaml
+++ b/.github/taskfiles/k8s.tasks.yaml
@@ -87,18 +87,20 @@ tasks:
   cilium-bootstrap:
     aliases: [cilium]
     desc: Bootstrap Cilium onto new cluster, ready for Flux to take over managing Cilium.
+    dir: "{{.ROOT_DIR}}/kubernetes/bootstrap/cilium"
     vars:
       C: '{{ or .C (fail "Missing C environment variable for cluster!") }}'
     cmds:
       - kubectl delete configmap -n kube-system cilium-config || true
       - kubectl delete daemonset -n kube-system cilium || true
       - kubectl delete deployment -n kube-system cilium-operator || true
+      - cp -f {{.ROOT_DIR}}/kubernetes/deployments/core/_networking/cilium/app/base-values.yaml {{.ROOT_DIR}}/kubernetes/bootstrap/cilium/values.yaml
       - task: sops-apply
         vars:
           C: '{{.C | default "admin@kube-prod"}}'
-          F: "{{.ROOT_DIR}}/kubernetes/deployments/core/_networking/cilium/app"
-          FCMD: "kubectl kustomize --enable-helm"
-      - defer: rm -rf {{.ROOT_DIR}}/kubernetes/deployments/core/_networking/cilium/app/charts
+          F: "{{.ROOT_DIR}}/kubernetes/bootstrap/cilium"
+          FCMD: "kubectl kustomize --enable-helm --load-restrictor=LoadRestrictionsNone"
+      - defer: rm -rf {{.ROOT_DIR}}/kubernetes/bootstrap/cilium/charts
 
   newapp:
     desc: Copy app folder structure template, substitute APPNAME, and (TODO) prompt user for variables values such as DNS, UID etc.
@@ -115,9 +117,9 @@ tasks:
     desc: Start a iperf2 server on one node, and iperf2 client on another node, to benchmark network performance.
     dir: "{{.ROOT_DIR}}/.taskfiles/k8s/template/iperf2"
     vars: &iperf2-vars
-      SERVER_NAME: &iperf2-server-name 'iperf2-server-{{- .TIMENOW -}}'
+      SERVER_NAME: &iperf2-server-name "iperf2-server-{{- .TIMENOW -}}"
       SERVER_NS: &iperf2-server-ns '{{ .SERVER_NS | default "default" }}'
-      CLIENT_NAME: &iperf2-client-name 'iperf2-client-{{- .TIMENOW -}}'
+      CLIENT_NAME: &iperf2-client-name "iperf2-client-{{- .TIMENOW -}}"
       CLIENT_NS: &iperf2-client-ns '{{ .CLIENT_NS | default "default" }}'
       CLUSTER_DOMAIN: '{{ .CLUSTER_DOMAIN | default "cluster.local" }}'
       SERVER_PORT: '{{ .SERVER_PORT | default "5001" }}'
@@ -131,20 +133,20 @@ tasks:
       - defer: cat ./server.yaml | envsubst | kubectl delete -f -
       - task: wait-pod-running
         vars:
-          NAME: '-l job-name={{.SERVER_NAME}}'
-          NS: '{{.SERVER_NS}}'
+          NAME: "-l job-name={{.SERVER_NAME}}"
+          NS: "{{.SERVER_NS}}"
       - cat ./client.yaml | envsubst | kubectl apply -f -
       - defer: cat ./client.yaml | envsubst | kubectl delete -f -
       - task: wait-finish
         vars:
-          NAME: '{{.CLIENT_NAME}}'
-          NS: '{{.CLIENT_NS}}'
+          NAME: "{{.CLIENT_NAME}}"
+          NS: "{{.CLIENT_NS}}"
 
   kbench:
-    vars: &kbench-vars
-      # SC: '{{ or .SC (fail "Missing `SC` environment variable!") }}'
-      SC: '{{.SC}}'
-      NODE: '{{.NODE}}'
+    vars:
+      &kbench-vars # SC: '{{ or .SC (fail "Missing `SC` environment variable!") }}'
+      SC: "{{.SC}}"
+      NODE: "{{.NODE}}"
       NS: '{{ .NS | default "default" }}'
     env: *kbench-vars
     cmds:
@@ -179,13 +181,13 @@ tasks:
         sh: |-
           [[ -z "{{.KS}}" ]] && echo "{{.APP}}-app" || echo "{{.KS}}"
       KSNS: '{{ .KSNS | default "flux-system" }}'
-      HR: '{{ .HR | default .APP }}'
+      HR: "{{ .HR | default .APP }}"
       HRNS:
         sh: |-
           [[ -n "{{.HRNS}}" ]] && echo "{{.HRNS}}" && exit || [[ -n "{{.NS}}" ]] && echo "{{.NS}}" && exit || echo "{{.APP}}"
       APP: *app-fail
-      NS: '{{ .NS | default .APP }}'
-      REASON: '{{ .REASON | default .TIMENOW }}'
+      NS: "{{ .NS | default .APP }}"
+      REASON: "{{ .REASON | default .TIMENOW }}"
     cmds:
       - |- # annotate Flux Kustomization
         [[ {{.KS}} != "false" ]] && kubectl annotate --overwrite kustomizations.kustomize.toolkit.fluxcd.io -n {{.KSNS}} {{.KS}} scaledown.home.arpa/reason={{.REASON}} || true
@@ -203,8 +205,8 @@ tasks:
         kubectl scale deployment -n {{.NS}} {{.APP}} --replicas 0 || kubectl scale statefulset -n {{.NS}} {{.APP}} --replicas 0
       - task: wait-pod-delete
         vars:
-          NAME: '{{.APP}}'
-          NS: '{{.NS}}'
+          NAME: "{{.APP}}"
+          NS: "{{.NS}}"
 
   scale-back-up:
     aliases: ["up"]
