--- a/kubernetes/deployments/core/_networking/cilium/config/BGP.yaml
+++ b/kubernetes/deployments/core/_networking/cilium/config/BGP.yaml
@@ -15,7 +15,11 @@ spec:
       exportPodCIDR: false
       serviceSelector: # this replaces address-pools, instead of defining the range of IPs that can be assigned to LoadBalancer services, now services have to match below selectors for their LB IPs to be announced
         matchExpressions:
-          - {key: thisFakeSelector, operator: NotIn, values: ['will-match-and-announce-all-services']}
+          - {
+              key: thisFakeSelector,
+              operator: NotIn,
+              values: ["will-match-and-announce-all-services"],
+            }
       neighbors:
         - peerAddress: "${IP_GATEWAY_K8S_VLAN}/32" # unlike bgp-config ConfigMap, peerAddress needs to be in CIDR notation
           peerASN: ${ASN_ROUTER}
